--- a/package.json
+++ b/package.json
@@ -1,9 +1,19 @@
 {
-  "name": "rainbowgold-api",
+  "name": "rainbowgold-next-minikit",
+  "private": true,
   "version": "1.0.0",
   "type": "module",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
-    "@upstash/redis": "^1.22.0",
+    "next": "14.2.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "@upstash/redis": "^1.30.0",
     "jsonwebtoken": "^9.0.2"
   }
 }
